--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -353,4 +353,9 @@ ul.portfolio-image li .desc {
 #social-links .items:nth-child(4) a:hover{
     color: #0077B5;
 }
-/*social-links ends
+/*social-links ends*/
+#footer{
+    background-image: url(images/testimonial-bg.jpg);
+    color: white;
+}
+/*footer ends*/
