--- a/innovationsofts/Website/css/main.css
+++ b/innovationsofts/Website/css/main.css
@@ -71,7 +71,9 @@ section h2{
     justify-content: flex-end;
     align-content: center;
     height: 600px;
-    background: url('/img/Mountains.jpg') no-repeat center;
+    background-image: url("Mountains.jpg") ;
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
     padding-bottom: 90px;
 }
@@ -124,7 +126,7 @@ section h2{
 /* Map*/
 #secMap{
     height: 600px;
-    background: url('/img/Map.png')
+    background-image: url("Map.png");
 }
 
 /* Footer */
