--- a/LANDING PAGES/One/style.css
+++ b/LANDING PAGES/One/style.css
@@ -65,7 +65,6 @@
 button:hover{
     background-color: black;
     color: aliceblue;
-    padding: 15px;
     border-radius: 5px;
     transition: .5s;
     transition-timing-function: ease
@@ -76,10 +75,8 @@ button:hover{
     font-size: 50px;
     text-align: center;
     margin-top: 20px;
-    font-family: 'Sedgwick Ave', cursive;
-}
-.count:hover{
-    color:darkorange;
-    transition-timing-function: ease-out;
-    transition-delay: .5s;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
+    position: fixed;
+    margin-left: 35%;
 }
